package org.example;

public enum EngineType {
    PETROL, DIESEL, ELECTRIC, TURBOPROP, TURBOJET
}
