package org.example;

public enum FuelType {
    GASOLINE, DIESEL, KEROSENE, ELECTRIC
}
