package org.example;

public interface Operable {
    void start();
    void stop();
}
