package org.example;

public interface Refuelable {
    void refuel(int liters);
    int fuelLevel();
    int fuelCapacity();
}
